--- a/style.css
+++ b/style.css
@@ -17,5 +17,69 @@ body
 h1
 {
     text-align: center;
-    font-size: 60px;
+    font-size: 80px;
+    margin-bottom: 0;
+    -webkit-text-stroke: 3px #777;
+}
+
+.first_page
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-height: 70vh;
+}
+
+.first_page button
+{
+    width: 100px;
+    height: 40px;
+    background-color: transparent;
+    outline: auto;
+    color: #fff;
+    border-radius: 30px;
+    margin:20px;
+    margin-bottom: 30px;
+    border:0;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.first_page button:hover
+{
+    background-color: #fff;
+    color:#333333;
+    outline-color: #fff;
+}
+
+.carre_tangram
+{
+    outline: auto;
+    height: 500px;
+    width: 500px;
+    background-color: #222222;
+    box-shadow: 12px 12px 12px black;
+    position: relative;
+}
+
+.triangle_un
+{
+    display: absolute;
+    height: 0;
+    width: 0;
+    border-top : 250px solid #99cc33;
+    border-right : 250px solid transparent;
+    background-color: transparent;
+}
+
+.triangle_deux
+{
+    display: absolute;
+    height: 0;
+    width: 0;
+    border-top : 250px solid #99cc33;
+    border-bottom : 250px solid transparent;
+    border-left: 250px solid;
+    background-color: transparent;
 }
