--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1
 {
     text-align: center;
     font-size: 80px;
-    margin-bottom: 0;
+    margin:0;
     -webkit-text-stroke: 3px #777;
 }
 
@@ -27,7 +27,7 @@ h1
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-height: 70vh;
+    max-height: 100%;
 }
 
 .first_page button
@@ -65,7 +65,7 @@ h1
 
 .triangle_un
 {
-    display: absolute;
+    position: absolute;
     height: 0;
     width: 0;
     border-top : 250px solid #99cc33;
@@ -75,11 +75,45 @@ h1
 
 .triangle_deux
 {
-    display: absolute;
+    position: absolute;
+    top:50%;
     height: 0;
     width: 0;
     border-left : 125px solid #3399ff;
     border-bottom : 125px solid transparent;
     border-top : 125px solid transparent;
     background-color: transparent;
+}
+
+.triangle_trois
+{   
+    position: absolute;
+    border-top : 125px solid  #ff9933;
+    border-right : 125px solid transparent;
+    border-left : 125px solid transparent;
+    background-color: transparent;
+    top:125px;
+    left:125px;
+}
+
+.carre
+{   
+    position:absolute;
+    width  : 0;
+    height : 0;
+    border : 125px solid transparent;
+    border-bottom : 125px solid #ff6666;
+    background-color: transparent;
+}
+
+.carre:after
+{
+    width  : 0;
+    height : 0;
+    content : '';
+    position : absolute;
+    left : -125px;
+    top  : 125px;
+    border : 125px solid transparent;
+    border-top : 125px solid #ff6666;
 }
