--- a/style.css
+++ b/style.css
@@ -22,17 +22,23 @@ h1
     -webkit-text-stroke: 3px #777;
 }
 
-.first_page
+.boutons
 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-height: 100%;
 }
 
-.first_page button
+
+.btn_carre button
 {
-    width: 100px;
+    color: orange;
+    border:none;
+}
+
+button
+{
+    width: 120px;
     height: 40px;
     background-color: transparent;
     outline: auto;
@@ -46,11 +52,24 @@ h1
     font-weight: 600;
 }
 
-.first_page button:hover
+button:hover
 {
     background-color: #fff;
     color:#333333;
     outline-color: #fff;
+}
+
+.centre
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}  
+
+.centre button
+{
+    margin:auto;
+
 }
 
 .carre_tangram
@@ -102,7 +121,7 @@ h1
     top: 161px;
     left: 37px;
     width: 177px;
-    height: 177px;
+    height: 177.5px;
     transform: rotate(45deg);
     background-color: #ff6666;
 }
@@ -140,4 +159,22 @@ h1
     width: 250px;
     transform: rotate(180deg) skew(-45deg);
     background-color: #6666cc;
+}
+
+.liste_gauche
+{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: 500px;
+    margin-right: 10%;
+}
+
+.liste_droite
+{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: 500px;
+    margin-left: 10%;
 }
