--- a/style.css
+++ b/style.css
@@ -32,21 +32,26 @@ h1
 
 .btn_carre button
 {
-    color: orange;
-    border:none;
+    color: #fff;
+    background-color: #3399ff;
+    border: none;
+    font-size: 30px;
+    font-weight: 600;
+    margin:20px;
+    border-radius: 30px;
+    width: 130px;
 }
 
-button
+.centre button
 {
-    width: 120px;
+    width:130px;
     height: 40px;
     background-color: transparent;
-    outline: auto;
     color: #fff;
+    outline: auto transparent;
     border-radius: 30px;
     margin:20px;
     margin-bottom: 30px;
-    border:0;
     text-align: center;
     font-size: 20px;
     font-weight: 600;
