--- a/cat.css
+++ b/cat.css
@@ -1,39 +1,39 @@
-.chat .triangle_un{
+.cat .triangle_un{
     left:54px;
     top:18px;
     transform: rotate(180deg);
 }
-.chat .carre{
+.cat .carre{
     left:90px;
     top:180px;
     transform: rotate(45deg);
 
 }
-.chat .triangle_trois{
+.cat .triangle_trois{
     left:116px;
     top:331px;
     transform: rotate(90deg);
 
 }
-.chat .triangle_cinq{
+.cat .triangle_cinq{
     left:303px;
     top:267px;
     transform: rotate(0deg);
 
 }
-.chat .triangle_quatre{
+.cat .triangle_quatre{
     left:339px;
     top:529px;
     transform: rotate(45deg);
 
 }
-.chat .parallelogramme{
+.cat .parallelogramme{
     left: 624px;
     top: 808px;
     transform: rotate(20deg) skew(-45deg);
 
 }
-.chat .triangle_deux{
+.cat .triangle_deux{
     left:54px;
     top:18px;
     transform: rotate(0deg);
