--- a/style.css
+++ b/style.css
@@ -387,4 +387,37 @@ button:hover
         position: relative;
         height: auto;
     }
+
+    .night_mode button
+    {
+        background-color: transparent;
+        height:50px;
+        width:50px;
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top:0;
+        right:0;
+        z-index:99;
+        transition: 0.7s;
+    }
+
+    .night_mode button:hover i
+    {
+        color:#3399ff;
+        background-color: transparent;
+    }
+
+    .night_mode button:hover
+    {
+        background-color: transparent;
+    }
+
+    .night_mode button i
+    {
+        background-color: transparent;
+        color: #fff;
+        transition: 0.7s;
+    }
 }
