--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ button:hover
     font-weight: 600;
     margin:20px;
     border-radius: 30px;
-    width: 100px;
+    padding: 10px;
+    width: 120px;
 }
 
 .btn_carre button:hover
@@ -58,10 +59,11 @@ button:hover
     border: none;
     font-size: 20px;
     font-weight: 600;
-    margin:20px;
+    margin: 20px;
+    padding: 10px;
     border-radius: 30px;
     background-color: #333;
-    width: 100px;
+    width: 120px;
 }
 
 button:hover
@@ -78,13 +80,6 @@ button:hover
     height:100vh;
     width:100%;
     align-items: center;
-    justify-content: space-between;
-}  
-
-.centre button
-{
-    margin:20px;
-    border: #fff;
 }
 
 .carre_tangram
@@ -92,7 +87,6 @@ button:hover
     height: 500px;
     width: 500px;
     position: relative;
-    gap: 450px;
 }
 
 .triangle_un
@@ -193,6 +187,7 @@ button:hover
     flex-direction: row;
     position: relative;
     height: auto;
+    margin-bottom: 50px;
 }
 
 .toto
