--- a/swan.css
+++ b/swan.css
@@ -7,7 +7,7 @@
 .swan .triangle_un
 {
     top: 475px;
-    left: 74px;
+    left: -34px;
     transform:rotate(315deg);
 }
 
@@ -15,41 +15,41 @@
 {
     transform:rotate(45deg);
     top: -18px;
-    left: 41px;
+    left: -57px;
 }
 
 .swan .triangle_trois
 {
     transform:rotate(270deg);
-    top: 412px;
-    left: -40px;
+    top: 408px;
+    left: -146px;
     z-index:1;
 }
 
 .swan .triangle_quatre
 {
     transform: rotate(135deg);
-    left: 161.5px;
     bottom: -438px;
     z-index: 1;
+    right: 192px;
 }
 
 .swan .triangle_cinq
 {   
     transform: rotate(90deg);
     bottom: -402px;
-    left: 428px;
+    left: 328px;
 }
 
 .swan .carre
 {
     top:260px;
-    left:60px;
+    left:-40px;
 }
 
 .swan .parallelogramme
 {
     transform: rotate(270deg) skew(-45deg);
     top:99px;
-    left:85px;
+    left:-10px;
 }
