--- a/style.css
+++ b/style.css
@@ -9,10 +9,12 @@
 body
 {
     color: #fff;
-    margin:20px;
     background-color: #fff;
 }
 
+nav{
+    top: 0px;
+}
 h1
 {
     text-align: center;
@@ -245,7 +247,7 @@ button:hover
     html
     {
         transform: scale(0.65);
-        height: 100vh;
+        height: 15vh;
         width: 100vw;
     }
 
@@ -435,3 +437,4 @@ button:hover
         color: #fff;
     }
 }
+
