--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 body
 {
     color: #fff;
-    margin:20px;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -17,6 +16,9 @@ body
     align-items: center;
 }
 
+nav{
+    top: 0px;
+}
 h1
 {
     text-align: center;
@@ -283,7 +285,7 @@ button:hover
     html
     {
         transform: scale(0.65);
-        height: 100vh;
+        height: 15vh;
         width: 100vw;
     }
 
@@ -472,3 +474,4 @@ button:hover
         color: #fff;
     }
 }
+
