--- a/bear.css
+++ b/bear.css
@@ -1,3 +1,23 @@
+.bear{
+
+	background: linear-gradient(-45deg, #dba14b, #dbc84cfd ,#87de6d, #58d865);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+    background-repeat: no-repeat;}
+
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 .bear .carre_tangram
 {
     height: 500px;
