--- a/style.css
+++ b/style.css
@@ -247,8 +247,8 @@ button:hover
     html
     {
         transform: scale(0.65);
-        height: 15vh;
-        width: 100vw;
+        height: 100%;
+        width: 100%;
     }
 
     body
@@ -402,6 +402,7 @@ button:hover
         grid-template-columns: repeat(3, 1fr);
         position: relative;
         height: auto;
+        
     }
 
     .night_mode button
@@ -435,5 +436,24 @@ button:hover
         background-color: #333;
         color: #fff;
     }
+}
+body {
+	background: linear-gradient(-45deg, #23d588, #23d5ab ,#ee7752, #e73c7e);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+    background-repeat: no-repeat;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
