--- a/swan.css
+++ b/swan.css
@@ -1,3 +1,22 @@
+.swan {
+	background: linear-gradient(-45deg, #601bea, #ab42e4 ,#ee7752, #e73c7e);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+    background-repeat: no-repeat;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 .swan .carre_tangram
 {
     height: 500px;
