--- a/camel.css
+++ b/camel.css
@@ -1,3 +1,23 @@
+.camel{
+	background: linear-gradient(-45deg, #f2df09,#4d2c02  ,#f8e50a ,#85da25 );
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100%;
+    background-repeat: no-repeat;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 .camel .carre_tangram {
   height: 500px;
   width: 500px;
