--- a/dog.css
+++ b/dog.css
@@ -1,3 +1,23 @@
+.dog {
+	background: linear-gradient(-45deg, #db6d0d, #b56016 ,#541e0e, #582f0f);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+    background-repeat: no-repeat;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 .dog .triangle_un{
     left:463px;
     top:482px;
