--- a/reset.css
+++ b/reset.css
@@ -1,3 +1,23 @@
+.reset {
+	background: linear-gradient(-45deg, #393d3c, #473b38,#d4dcda , #e73c7e);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+    background-repeat: no-repeat;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 .reset .carre_tangram
 {
     height: 500px;
