--- a/fish.css
+++ b/fish.css
@@ -3,7 +3,7 @@
 	background: linear-gradient(-45deg, #492fdc, #2baaca ,#665587, #664cba);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
-	height: 100vh;
+    height: 100%;
     background-repeat: no-repeat;}
 
 
