--- a/swan.css
+++ b/swan.css
@@ -2,7 +2,7 @@
 	background: linear-gradient(-45deg, #601bea, #ab42e4 ,#ee7752, #e73c7e);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
-	height: 100vh;
+	height: 100%;
     background-repeat: no-repeat;
 }
 
@@ -17,10 +17,10 @@
 		background-position: 0% 50%;
 	}
 }
+
 .swan .carre_tangram
-{
-    height: 500px;
-    width: 500px;
+{  
+    bottom: 100px;
 }
 
 .swan .triangle_un
