--- a/style.css
+++ b/style.css
@@ -479,7 +479,7 @@ body {
 	background: linear-gradient(-45deg, #23d588, #23d5ab ,#ee7752, #e73c7e);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
-	height: 100vh;
+	height: 100%;
     background-repeat: no-repeat;
 }
 
