--- a/color.css
+++ b/color.css
@@ -1,19 +1,33 @@
+.color_picker {
+  display: block;
+  height: 250px;
+  width: 250px;
+  background: #f5f5f5;
+  border-radius: 15px;
+  margin: 30px 0;
+  margin-top: -430px;
+  margin-left: -700px;
+}
+
+.color_picker p {
+  text-align: center;
+  color: #333;
+}
+
 #colorwheel {
-  top: 400px;
-  margin: 20px auto;
-  position: absolute;
-  width: auto;
-  height: auto;
+  display: block;
+  position: relative;
+  margin: 95px auto;
   transform: scale(0.5);
 }
 
 span {
   cursor: pointer;
   position: absolute;
-  top: 310px;
-  left: 420px;
-  width: 200px;
-  height: 20px;
+  top: 0px;
+  left: 230px;
+  width: 80px;
+  height: 30px;
   -ms-transform-origin: -100px 50%;
   -webkit-transform-origin: -100px 50%;
   -moz-transform-origin: -100px 50%;
@@ -27,4 +41,21 @@ span:active {
   opacity: 1;
   border-top-right-radius: 100%;
   border-bottom-right-radius: 100%;
+}
+
+@media screen and (max-width: 1000px) {
+  .color_picker {
+    position: absolute;
+    margin-top: 500px;
+    margin-bottom: 50px;
+    margin-left: 0;
+  }
+  span {
+    cursor: pointer;
+    position: absolute;
+    top: 0px;
+    left: 225px;
+    width: 70px;
+    height: 20px;
+  }
 }
