--- a/style.css
+++ b/style.css
@@ -1,152 +1,352 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
 
 * {
-	font-family: 'Poppins', sans-serif;
-	scroll-behavior: smooth;
-	padding: 0;
+  font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
+  padding: 0;
 }
 
-body
-{
+body {
+  color: #fff;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+nav {
+  top: 0px;
+}
+h1 {
+  text-align: center;
+  font-size: 70px;
+  margin: 0;
+  color: #333;
+}
+
+button {
+  transition: 0.2s;
+}
+
+i {
+  transition: 0.2s;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.boutons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn_carre button {
+  color: #fff;
+  background-color: #3399ff;
+  border: none;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 20px;
+  border-radius: 30px;
+  padding: 10px;
+  width: 120px;
+}
+
+.centre button {
+  color: #fff;
+  border: none;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 20px;
+  padding: 10px;
+  border-radius: 30px;
+  background-color: #333;
+  width: 120px;
+  height: fit-content;
+}
+
+.btn_carre button:hover {
+  background-color: #fff;
+  color: #3399ff;
+  outline: auto #3399ff;
+}
+
+.liste button:hover {
+  background-color: #fff;
+  color: #333;
+  outline: auto #333;
+}
+
+.centre {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  position: relative;
+}
+
+.carre_tangram {
+  height: 500px;
+  width: 500px;
+  position: relative;
+  transform: scale(0.5);
+  top: -50px;
+}
+
+.triangle_un {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 0;
+  width: 0;
+  border-top: 250px solid #99cc33;
+  border-right: 250px solid transparent;
+  background-color: transparent;
+  transition: 1s all ease;
+}
+
+.triangle_deux {
+  position: absolute;
+  top: 250px;
+  left: 0;
+  height: 0;
+  width: 0;
+  border-left: 125px solid #3399ff;
+  border-bottom: 125px solid transparent;
+  border-top: 125px solid transparent;
+  background-color: transparent;
+  transition: 1s all ease;
+}
+
+.triangle_trois {
+  position: absolute;
+  border-top: 125px solid #ff9933;
+  border-right: 125px solid transparent;
+  border-left: 125px solid transparent;
+  background-color: transparent;
+  top: 125px;
+  left: 125px;
+  transition: 1s all ease;
+}
+
+.carre {
+  position: absolute;
+  top: 161px;
+  left: 37px;
+  width: 177px;
+  height: 177.5px;
+  transform: rotate(45deg);
+  background-color: #ff6666;
+  transition: 1s all ease;
+}
+
+.triangle_quatre {
+  display: block;
+  position: absolute;
+  bottom: -125px;
+  right: 125px;
+  transform: rotate(-90deg);
+  border-left: 250px solid #33cc66;
+  border-bottom: 250px solid transparent;
+  border-top: 250px solid transparent;
+  background-color: transparent;
+  transition: 1s all ease;
+}
+
+.triangle_cinq {
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  transform: rotate(180deg);
+  border-left: 250px solid #ffcc00;
+  border-bottom: 250px solid transparent;
+  border-top: 250px solid transparent;
+  background-color: transparent;
+  transition: 1s all ease;
+}
+
+.parallelogramme {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 187px;
+  height: 125px;
+  width: 250px;
+  transform: rotate(180deg) skew(-45deg);
+  background-color: #6666cc;
+  transition: 1s all ease;
+}
+
+.liste {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  height: fit-content;
+  width: 100%;
+  margin-bottom: 50px;
+  transition: 1s all ease;
+}
+
+.toto {
+  padding: 5%;
+}
+
+.night_mode button {
+  background-color: #333;
+  height: 50px;
+  width: 50px;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 20px;
+  right: 20px;
+  z-index: 99;
+}
+
+.night_mode button:hover i {
+  color: #3399ff;
+  background-color: #fff;
+}
+
+.night_mode button:hover {
+  background-color: #fff;
+  outline: solid #3399ff;
+}
+
+.night_mode button i {
+  background-color: #333;
+  color: #fff;
+}
+
+.design {
+  position: relative;
+  top: 460px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 500px;
+  list-style-type: none;
+}
+
+.design button {
+  color: #fff;
+  font-size: 15px;
+  background-color: #333;
+  border-radius: 0;
+  margin: 0;
+  flex-grow: 2;
+  min-width: 25%;
+  padding: 20px;
+  border: solid #fff;
+}
+
+.active {
+  animation: blinker 2.5s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  body {
     color: #fff;
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+    margin: 5px;
+  }
 
-nav{
-    top: 0px;
-}
-h1
-{
-    text-align: center;
-    font-size: 70px;
-    margin:0;
-    color:#333;
-}
+  h1 {
+    font-size: 50px;
+  }
 
-button
-{
-    transition: 0.2s;
-}
-
-i
-{
-    transition: 0.2s;
-}
-
-button:hover
-{
-    cursor:pointer;
-}
-
-.boutons
-{
+  .boutons {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+  }
 
-
-.btn_carre button
-{
+  .btn_carre button {
     color: #fff;
     background-color: #3399ff;
     border: none;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
-    margin:20px;
+    margin: 2px;
     border-radius: 30px;
-    padding: 10px;
-    width: 120px;
-}
+    padding: 5px 15px;
+    width: fit-content;
+  }
 
-.centre button
-{
+  .centre button {
     color: #fff;
     border: none;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
     margin: 20px;
-    padding: 10px;
     border-radius: 30px;
-    background-color: #333;
-    width: 120px;
-}
+    padding: 5px 15px;
+    width: fit-content;
+  }
 
-.btn_carre button:hover
-{
-    background-color: #fff;
-    color: #3399ff;
-    outline: auto #3399ff;
-}
-
-.liste button:hover
-{
-    background-color: #fff;
-    color:#333;
-    outline: auto #333;
-}
-
-
-.centre
-{
+  .centre {
     display: flex;
     flex-direction: column;
-    width:100%;
+    height: 80vh;
+    width: 100%;
     align-items: center;
-}
+    justify-content: space-between;
+  }
 
-.carre_tangram
-{
+  .centre button {
+    margin: 10px;
+    border: #fff;
+  }
+
+  .carre_tangram {
     height: 500px;
     width: 500px;
-    position: relative;
-}
-
-.triangle_un
-{
     position: absolute;
-    left: 0;
-    top: 0;
+    transform: scale(0.5);
+    margin-top: 120px;
+  }
+
+  .triangle_un {
+    position: absolute;
     height: 0;
     width: 0;
-    border-top : 250px solid #99cc33;
-    border-right : 250px solid transparent;
+    border-top: 250px solid #99cc33;
+    border-right: 250px solid transparent;
     background-color: transparent;
-    transition: 1s all ease;
-}
+  }
 
-.triangle_deux
-{
+  .triangle_deux {
     position: absolute;
-    top: 250px;
-    left: 0;
+    top: 50%;
     height: 0;
     width: 0;
-    border-left : 125px solid #3399ff;
-    border-bottom : 125px solid transparent;
-    border-top : 125px solid transparent;
+    border-left: 125px solid #3399ff;
+    border-bottom: 125px solid transparent;
+    border-top: 125px solid transparent;
     background-color: transparent;
-    transition: 1s all ease;
-}
+  }
 
-.triangle_trois
-{   
+  .triangle_trois {
     position: absolute;
-    border-top : 125px solid  #ff9933;
-    border-right : 125px solid transparent;
-    border-left : 125px solid transparent;
+    border-top: 125px solid #ff9933;
+    border-right: 125px solid transparent;
+    border-left: 125px solid transparent;
     background-color: transparent;
-    top:125px;
-    left:125px;
-    transition: 1s all ease;
-}
+    top: 125px;
+    left: 125px;
+  }
 
-.carre
-{   
+  .carre {
     position: absolute;
     top: 161px;
     left: 37px;
@@ -154,344 +354,87 @@ button:hover
     height: 177.5px;
     transform: rotate(45deg);
     background-color: #ff6666;
-    transition: 1s all ease;
-}
+  }
 
-.triangle_quatre 
-{
+  .triangle_quatre {
     display: block;
     position: absolute;
     bottom: -125px;
     right: 125px;
     transform: rotate(-90deg);
-    border-left : 250px solid #33cc66;
-    border-bottom : 250px solid transparent;
-    border-top : 250px solid transparent;
+    border-left: 250px solid #33cc66;
+    border-bottom: 250px solid transparent;
+    border-top: 250px solid transparent;
     background-color: transparent;
-    transition: 1s all ease;
-}
+  }
 
-.triangle_cinq 
-{
+  .triangle_cinq {
     display: block;
     position: absolute;
     bottom: 0px;
     right: 0px;
     transform: rotate(180deg);
-    border-left : 250px solid #ffcc00;
-    border-bottom : 250px solid transparent;
-    border-top : 250px solid transparent;
+    border-left: 250px solid #ffcc00;
+    border-bottom: 250px solid transparent;
+    border-top: 250px solid transparent;
     background-color: transparent;
-    transition: 1s all ease;
-}
+  }
 
-.parallelogramme 
-{
+  .parallelogramme {
     display: block;
     position: absolute;
-    top: 0;
+    top: -0.5px;
     left: 187px;
     height: 125px;
     width: 250px;
     transform: rotate(180deg) skew(-45deg);
     background-color: #6666cc;
-    transition: 1s all ease;
-}
-
-.liste
-{
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    height: auto;
-    margin-bottom: 50px;
-    transition: 1s all ease;
-}
-
-.toto
-{
-    padding: 5%;
-}
-
-.night_mode button
-{
-    background-color: #333;
-    height:50px;
-    width:50px;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top:20px;
-    right:20px;
-    z-index:99;
-}
-
-.night_mode button:hover i
-{
-    color:#3399ff;
-    background-color: #fff;
-}
-
-.night_mode button:hover
-{
-    background-color: #fff;
-    outline: solid #3399ff;
-}
-
-.night_mode button i
-{
-    background-color: #333;
-    color: #fff;
-}
-
-.design
-{
-    position: relative;
-    top:460px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 500px;
-    list-style-type: none;
-}
-
-.design button
-{
-    color: #fff;
-    font-size: 15px;
-    background-color: #333;
-    border-radius: 0;
-    margin:0;
-    flex-grow: 2;
-    min-width: 25%;
-    padding: 20px;
-    border: solid #fff;
-}
-
-.active
-{
-    animation: blinker 2.5s linear infinite;
-}
-
-@keyframes blinker {
-    50% {
-      opacity: 0;
-    }
   }
 
-@media screen and (max-width: 1000px)
-{
-    html
-    {
-        transform: scale(0.65);
-        height: 100%;
-        width: 100%;
-    }
+  .night_mode button {
+    background-color: #333;
+    height: 50px;
+    width: 50px;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    top: 10px;
+    left: -75px;
+    z-index: 99;
+    opacity: 80%;
+  }
 
-    body
-    {
-        color: #fff;
-        margin:5px;
-    }
+  .night_mode button:hover i {
+    color: #3399ff;
+    background-color: #fff;
+  }
 
-    .boutons
-    {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+  .night_mode button:hover {
+    background-color: #fff;
+    outline: solid #3399ff;
+  }
 
-
-    .btn_carre button
-    {   
-        color: #fff;
-        background-color: #3399ff;
-        border: none;
-        font-size: 20px;
-        font-weight: 600;
-        margin:2px;
-        border-radius: 30px;
-        width: 120px;
-    }
-
-
-    .centre button
-    {
-        color: #fff;
-        border: none;
-        font-size: 20px;
-        font-weight: 600;
-        margin:20px;
-        border-radius: 30px;
-        width: 120px;
-    }
-
-    .centre
-    {
-        display: flex;
-        flex-direction: column;
-        height:100vh;
-        width:100%;
-        align-items: center;
-        justify-content: space-between;
-    }  
-
-    .centre button
-    {
-        margin: 10px;
-        border: #fff;
-    }
-
-    .carre_tangram
-    {
-        height: 500px;
-        width: 500px;
-        position: absolute;
-        transform: scale(0.5);
-        margin-top: 70px;
-    }
-
-    .triangle_un
-    {
-        position: absolute;
-        height: 0;
-        width: 0;
-        border-top : 250px solid #99cc33;
-        border-right : 250px solid transparent;
-        background-color: transparent;
-    }
-
-    .triangle_deux
-    {
-        position: absolute;
-        top:50%;
-        height: 0;
-        width: 0;
-        border-left : 125px solid #3399ff;
-        border-bottom : 125px solid transparent;
-        border-top : 125px solid transparent;
-        background-color: transparent;
-    }
-
-    .triangle_trois
-    {   
-        position: absolute;
-        border-top : 125px solid  #ff9933;
-        border-right : 125px solid transparent;
-        border-left : 125px solid transparent;
-        background-color: transparent;
-        top:125px;
-        left:125px;
-    }
-
-    .carre
-    {   
-        position: absolute;
-        top: 161px;
-        left: 37px;
-        width: 177px;
-        height: 177.5px;
-        transform: rotate(45deg);
-        background-color: #ff6666;
-    }
-
-    .triangle_quatre 
-    {
-        display: block;
-        position: absolute;
-        bottom: -125px;
-        right: 125px;
-        transform: rotate(-90deg);
-        border-left : 250px solid #33cc66;
-        border-bottom : 250px solid transparent;
-        border-top : 250px solid transparent;
-        background-color: transparent;
-    }
-
-    .triangle_cinq 
-    {
-        display: block;
-        position: absolute;
-        bottom: 0px;
-        right: 0px;
-        transform: rotate(180deg);
-        border-left : 250px solid #ffcc00;
-        border-bottom : 250px solid transparent;
-        border-top : 250px solid transparent;
-        background-color: transparent;
-    }
-
-    .parallelogramme 
-    {
-        display: block;
-        position: absolute;
-        top: -0.5px;
-        left: 187px;
-        height: 125px;
-        width: 250px;
-        transform: rotate(180deg) skew(-45deg);
-        background-color: #6666cc;
-    }
-
-    .liste
-    {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        position: relative;
-        height: auto;
-        
-    }
-
-    .night_mode button
-    {
-        background-color: #333;
-        height:50px;
-        width:50px;
-        position: fixed;
-        justify-content: center;
-        align-items: center;
-        top: 10px;
-        left: -75px;
-        z-index:99;
-        opacity:80%;
-    }
-    
-    .night_mode button:hover i
-    {
-        color:#3399ff;
-        background-color: #fff;
-    }
-    
-    .night_mode button:hover
-    {
-        background-color: #fff;
-        outline: solid #3399ff;
-    }
-    
-    .night_mode button i
-    {
-        background-color: #333;
-        color: #fff;
-    }
+  .night_mode button i {
+    background-color: #333;
+    color: #fff;
+  }
 }
 body {
-	background: linear-gradient(-45deg, #23d588, #23d5ab ,#ee7752, #e73c7e);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	height: 100%;
-    background-repeat: no-repeat;
+  background: linear-gradient(-45deg, #23d588, #23d5ab, #ee7752, #e73c7e);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100%;
+  background-repeat: no-repeat;
 }
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
-
